tests/pass/div_mod.tc
int main() {
  int a = -7 / 3;
  int b = -7 % 3;
  if (a == -2 && b == -1) {
    return 1;
  }
  return 0;
}
