tests/fail/duplicate_function.tc
int helper() {
  return 1;
}

int helper() {
  return 2;
}

int main() {
  return helper();
}
